First HTTP test works.

--- a/SOFTWARE/Debug/makefile
+++ b/SOFTWARE/Debug/makefile
@@ -17,6 +17,7 @@ RM := rm -rf
 -include Middlewares/Third_Party/LwIP/src/core/subdir.mk
 -include Middlewares/Third_Party/LwIP/src/apps/mqtt/subdir.mk
 -include Middlewares/Third_Party/LwIP/src/apps/mdns/subdir.mk
+-include Middlewares/Third_Party/LwIP/src/apps/http/subdir.mk
 -include Middlewares/Third_Party/LwIP/src/api/subdir.mk
 -include Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/subdir.mk
 -include Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/subdir.mk
@@ -32,6 +33,7 @@ RM := rm -rf
 -include Core/SCPI/libscpi/src/subdir.mk
 -include Core/SCPI/subdir.mk
 -include Core/HiSLIP/Src/subdir.mk
+-include Core/HTTP/Src/subdir.mk
 -include objects.mk
 
 ifneq ($(MAKECMDGOALS),clean)
